# go-vs-rust

./: Graphs.ipynb  README.md
Go/Programs/: binary_trees.go  parallel.go  parallel2.go  sum_of_squares.go
Go/programs/: parallel2.go  sum_of_squares_parallel.go
rust/: README.md
rust/benchmarks/binarytree/: README.md
rust/benchmarks/binarytree/src/: lib.rs  main.rs
rust/benchmarks/fibocrate/: README.md
rust/benchmarks/fibocrate/benches/: bench_fibo.rs
rust/benchmarks/fibocrate/src/: main.rs
rust/benchmarks/parallel_iteration/: Cargo.toml  README.md
rust/benchmarks/parallel_iteration/benches/: my_benchmark.rs
rust/benchmarks/parallel_iteration/src/: lib.rs  main.rs
rust/benchmarks/sum_of_squares/: Cargo.toml  README.md
rust/benchmarks/sum_of_squares/benches/: my_benchmark.rs
rust/benchmarks/sum_of_squares/src/: lib.rs
rust/programs/binarytree/: Cargo.toml
rust/programs/binarytree/benches/: my_benchmark.rs
rust/programs/fibocrate/: Cargo.toml
rust/programs/sum_of_squares/benches/: my_benchmark.rs
rust/programs/sum_of_squares/src/: main.rs
